--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <nav>
             <a href="#home">Home</a>
             <a href="#about">About</a>
+            <a href="#projects">Projects</a>
             <a href="#services">Services</a>
             <a href="#contact">Contact</a>
         </nav>
